<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="E_EthercatDiagnosisState" Id="{587e93d0-78ec-0b78-2f5e-5b966b97df41}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_EthercatDiagnosisState :
(
	READY,
	GET_SLAVE_STATES,
	GET_FAULTY_SLAVE_ADDRESSES,
	FINISHED,
	ERROR
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>