<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="E_EthercatDiagnosisStatus" Id="{ffcc0894-a95f-0978-29f3-131627315cc4}">
    <Declaration><![CDATA[TYPE E_EthercatDiagnosisStatus :
(
	NO_ERROR,				// No error, all slaves are present
	MISSING_ALLOWED_SLAVES,	// Missing slaves, but they are allowed (for example, hot connect)
	ERROR					// Missing slaves that are not allowed to be missing
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>